# smartqueueV2

./: .env.example  .gitignore  AUDIT_FONCTIONNALITES_FACTURATION.md  BACKOFFICE_PLAN.md  BACKOFFICE_STATUS.md  BILLING_FEATURES_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONNEXION_FACTURATION.md  DEMARRAGE_RAPIDE.md  DEVELOPMENT_SUMMARY.md  FIXES.md  GUIDE_FACTURATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_ET_PROCHAINES_ETAPES.md  JWT_AUTHENTICATION.md  MENU_FACTURATION_INTEGRATION.md  Makefile  PHASE1_BILLING_COMPLETE.md  PHASE1_IMPLEMENTATION_COMPLETE.md  PHASE3_IMPLEMENTATION.md  PHASE_1_COMPLETE.md  PHASE_1_PROGRESS.md  QUEUE_INTELLIGENCE.md  README.md  README_COMPLET.md  RESUME_SESSION.md  SESSION_SUMMARY.md  START.md  celerybeat-schedule.db  create_test_agent.py  docker-compose.dev.yml  docker-compose.mailpit.yml  smartqueue.db  start_with_websocket.sh  test_smtp_debug.py  test_smtp_verbose.py
backend/: .coverage  .env.example  =24.1  =3.2  Dockerfile  README.md  conftest.py  create_test_billing_data.sh  generate_billing_test_data.py  manage.py  pyproject.toml  requirements-security.txt  requirements.txt  simple_test_data.sh  smartqueue.db  start_dev.sh  test_email.py  test_sms.py  test_twilio.py
backend/apps/: __init__.py
backend/apps/contact/: __init__.py  models.py  serializers.py  urls.py  views.py
backend/apps/core/: __init__.py  admin.py  analytics.py  analytics_views.py  api_router.py  apps.py  audit.py  middleware.py  models.py  permissions.py  serializers.py  subscription_enforcement.py  system_config.py  urls.py  views.py  views_system.py
backend/apps/customers/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/displays/: __init__.py  admin.py  admin_views.py  apps.py  consumers.py  models.py  serializers.py  views.py
backend/apps/feedback/: __init__.py  admin.py  apps.py  models.py
backend/apps/queues/: admin.py  (+15 more)
backend/smartqueue_backend/: __init__.py  asgi.py  celery.py  routing.py  urls.py  wsgi.py
(+339 files in other folders)
